# DonationApp

./: .gitignore  app.json  package-lock.json
backend/api/: .env  Cargo.toml
backend/api/src/: main.rs  nearRegion  nearRegion.cpp  nearUser  nearUser.cpp  user_data.json
frontend/: package.json
frontend/Mobile/: App.js  ChangeLocationScreenS.js  ChangeLocationScreenT.js  CreateAccountScreen.js  CreateAccountScreenS.js  CreateAccountScreenT.js  DisplaySetting.js  DonationTrackScreen.js  FoundScreenS.js  HomeScreen.js  HomeScreenS.js  HomeScreenT.js  InformationScreenS.js  InformationScreenT.js  LoginScreen.js  NotificationScreenS.js  NotificationScreenT.js  PrivacySetting.js  ProfileScreen.js  ProfileScreenS.js  ProfileScreenT.js  RoleCheckScreen.js  SelectedDonationScreen.js  SettingScreen.js  SettingScreenS.js  SettingScreenT.js  app.json  package-lock.json  package.json
frontend/Mobile/images/: four.avif  two.avif
