[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # To read/write JSON files
argon2 = "0.3"
rand_core = "0.6"
tokio = { version = "1", features = ["full"] }  # For async file operations
sqlx = { version = "0.6", features = ["mysql", "runtime-actix-native-tls"]}
dotenv = "0.15"